# pdf-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows-gui.yml  release.yml
src/pdf_tools/: __init__.py  cli.py  compress.py  gui.py  to_word.py  workflow.py
tests/: test_compress.py  test_to_word.py
