[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tools"
version = "0.1.0"
description = "A standalone cross-platform tool to compress and manipulate PDF files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.23.0",
    "Pillow>=10.0.0",
    "pdf2docx>=0.5.6",
]

[project.scripts]
pdf-tools = "pdf_tools.cli:main"
pdf-tools-gui = "pdf_tools.gui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ocr = [
    "easyocr>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
